# advent-of-code

./: .gitignore  .releaserc  README.md  bsconfig.json  package-lock.json  package.json
.github/workflows/: run_tests.yml
2015/: README.md  bsconfig.json  package-lock.json
2018/: README.md  package-lock.json  package.json
2018/__tests__/: DayOne_test.re
2019/: README.md  bsconfig.json  package-lock.json  package.json  report.20191212.191504.63723.0.001.json
2019/__tests__/: Day10_test.re  Day12_test.re  Day13_test.re  Day1_test.re  Day2_test.re  Day3_test.re  Day4_test.re  Day5_test.re  Day6_test.re  Day7_test.re  Day8_test.re
2020/: README.md  bsconfig.json  package.json
__tests__/: Calibrate_test.re  DayFive_test.re  DayFour_test.re  DayThree_test.re  DayTwo_test.re  One_test.re
advent-of-native/: README.md  bench.json  package.json
advent-of-native/esy.lock/: index.json
advent-of-native/lib/: Data.re  Day12.re  Day12_test.re  Day6_test.re  DayOne.re  DayOneTest.re  DayTwoTest.re  dune
go/: go.mod  go.work  go.work.sum
go/2022/: README.md  go.mod
go/2023/: Makefile  README.md
go/2024/: Makefile  README.md  go.mod  go.sum
go/2025/: Makefile  README.md  go.mod
go/common/: input.go  utils.go
go/utils/: go.mod
javascript/2022/: .prettierrc  README.md  day01.mjs  day02.mjs  package-lock.json  package.json  utils.mjs
lua/2022/: day_01.lua  input1.txt
python/2021/: README.md  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  (+10 more)
rust-2017/: README.md
rust-2019/: README.md
rust-2020/: README.md
src/: One.re  OneTestData.re
(+645 files in other folders)
